# vedic_math_ML

./: .gitignore  README.md  pairs.json
attention_dag/: README.md  conftest.py  main.py
attention_dag/analysis/: __init__.py  compare.py
attention_dag/dag/: __init__.py  _build.py  flashattn_dag.py  node.py  scheduler.py  vedic_attn_dag.py
attention_dag/tests/: test_compare_fair_unit.py  test_dag_structure.py  test_scheduler_parity.py
phase2a/: CMakeLists.txt  README.md  VERIFICATION.md  run_pipeline.ps1
phase2a/src/: benchmark.cpp  depth.hpp  digits.hpp  native.hpp  schoolbook.hpp  vedic.hpp
phase2a/tests/: test_algorithms.cpp  test_digits.cpp  verify_counters.cpp
phase2a/tools/: build_counter_parity.py  compare_phases.py  export_pairs.py
phase2a/verification/: counter_parity.json
phase2b/: README.md  conftest.py  main.py
phase2b/analysis/: __init__.py  crossover.py
phase2b/dag/: __init__.py  _build.py  scheduler.py  schoolbook_dag.py  vedic_dag.py
phase2b/tests/: test_dag_correctness.py  test_scheduler.py
phase3/: CMakeLists.txt  README.md
phase3/analysis/: compare_dag.py
phase3/host/: benchmark.cu  pairs_io.hpp  validator.cu
phase3/kernels/: digits.cuh  native_kernel.cuh  schoolbook_kernel.cuh  vedic_kernel.cuh
scripts/: audit_results.py  benchmark_order_check.py  cross_verify_sample.py  run_final_pipeline.ps1  run_phase3.ps1  verify_counters.py
tests/: __init__.py  test_correctness.py  test_counter_golden.py  test_depth.py  test_digits.py
vedic_benchmark/: README.md  __init__.py  main.py
vedic_benchmark/algorithms/: __init__.py  _digits.py  native.py  schoolbook.py  vedic.py
vedic_benchmark/analysis/: __init__.py  counter.py  depth.py
vedic_benchmark/benchmark/: __init__.py  runner.py
vedic_benchmark/tools/: run_from_pairs.py
